base/hermes-workspace/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-workspace
  namespace: hermes-workspace
spec:
  type: ClusterIP
  selector:
    app: hermes-workspace
  ports:
    - name: http
      port: 3000
      targetPort: 3000
